# passgen

./: Cargo.toml  LICENSE
src/: lib.rs  main.rs  ui.rs
src/app/: config.rs
src/app/config/: category.rs  code_point.rs
src/app/config/category/: data.rs
src/ui/: validation.rs
