[package]
name = "passgen"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
phf = { version = "0.12.1", features = ["macros"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0", features = ["derive"] }
seshat-unicode = "0.3.1"
strum = "0.27.1"
